--- a/settings.json
+++ b/settings.json
@@ -1,32 +1,32 @@
+
 {
     "pageTitle": "나만의 동물상 테스트",
     "mainTitle": "난 무슨 동물상일까",
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/CPrPznTPo/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/eTRbZj6Jw/",
     "classDetails": [
         {
-            "name": "강아지",
-            "title": "강아지상",
-            "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
-            "celeb": "",
-            "color": "rgba(27, 175, 234, 1)"
+            "name": "사슴",
+            "title": "사슴상",
+            "explain": "똘망똘망하고 반짝이는 눈을 가진 당신! 맑고 순수한 이미지를 가지고 있다.",
+            "celeb": "사슴상 연예인: 윤아 (소녀시대), 서현진, 박은빈, 박보검",
+            "color": "rgba(225, 157, 157, 1)"
         },
         {
-            "name": "말",
-            "title": "말상",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
-            "color": "rgba(251, 176, 59, 1)"
+            "name": "여우",
+            "title": "여우상",
+            "explain": "눈꼬리가 올라간 매력적인 눈을 가진 당신! 날렵한 코와 턱선을 가지고 있어 첫인상은 다소 날카롭게 보일 수 있으나, 알고 보면 그 누구보다 따뜻한 사람이다",
+            "celeb": "여우상 연예인: 영케이 (데이식스), 예지 (있지), 연준 (투모로우바이투게더)",
+            "color": "rgba(0, 147, 217, 1)"
         },
         {
-            "name": "고양이",
-            "title": "고양이상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
-            "color": "rgba(265, 100, 50, 1)"
+            "name": "공룡",
+            "title": "공룡상",
+            "explain": "강한 이목구비를 가지고 있는 당신! 카리스마 있는 사람이다.",
+            "celeb": "공룡상 연예인: 김우빈, 공유, 송지효",
+            "color": "rgba(179, 255, 179, 1)"
         }
     ]
 }
-
