--- a/settings.json
+++ b/settings.json
@@ -8,21 +8,21 @@
     "modelUrl": "https://teachablemachine.withgoogle.com/models/eTRbZj6Jw/",
     "classDetails": [
         {
-            "name": "사슴",
+            "name": "사슴상",
             "title": "사슴상",
             "explain": "똘망똘망하고 반짝이는 눈을 가진 당신! 맑고 순수한 이미지를 가지고 있다.",
             "celeb": "사슴상 연예인: 윤아 (소녀시대), 서현진, 박은빈, 박보검",
             "color": "rgba(225, 157, 157, 1)"
         },
         {
-            "name": "여우",
+            "name": "여우상",
             "title": "여우상",
             "explain": "눈꼬리가 올라간 매력적인 눈을 가진 당신! 날렵한 코와 턱선을 가지고 있어 첫인상은 다소 날카롭게 보일 수 있으나, 알고 보면 그 누구보다 따뜻한 사람이다",
             "celeb": "여우상 연예인: 영케이 (데이식스), 예지 (있지), 연준 (투모로우바이투게더)",
             "color": "rgba(0, 147, 217, 1)"
         },
         {
-            "name": "공룡",
+            "name": "공룡상",
             "title": "공룡상",
             "explain": "강한 이목구비를 가지고 있는 당신! 카리스마 있는 사람이다.",
             "celeb": "공룡상 연예인: 김우빈, 공유, 송지효",
